--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   material_floating_search_bar: ^0.3.6
   provider: ^6.0.2
   external_app_launcher: ^2.0.2
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
